Increased the width of the AC and = buttons, so that the spacing issues are resolved.

--- a/style.css
+++ b/style.css
@@ -32,3 +32,11 @@ body {
 .calculatorGrid > button:hover {
     background-color: rgba(255, 255, 255, .90);
 }
+
+.spanTwo {
+    grid-column: span 2;
+}
+
+.output {
+    grid-column: 1 / -1;
+}
